load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goos = "linux", 
    goarch = "amd64",     
)

container_image(
    name = "dtls_server_image",
    base = "@distroless_base//image",
    entrypoint = ["/server"],
    files = [":server"],
    ports = ["8081"],    
    repository = "us-central1-docker.pkg.dev/builder-project/repo1/dtls_server",
)

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_pion_dtls_v2//:go_default_library",             
    ],
)